--- a/src/index.scss
+++ b/src/index.scss
@@ -22,3 +22,35 @@ h6 {
     @apply hidden;
   }
 }
+
+.Toastify__toast-container.Toastify__toast-container--top-right {
+  @apply w-96 p-0 shadow-none;
+
+  .Toastify__toast {
+    @apply relative overflow-hidden rounded-lg p-4 shadow-center;
+  }
+
+  .Toastify__toast-body {
+    @apply pr-8;
+  }
+
+  .Toastify__close-button {
+    @apply absolute right-4 top-6 z-0 flex h-6 w-6 items-center justify-center rounded-full pl-px text-slate-700;
+
+    svg {
+      @apply w-3;
+    }
+  }
+
+  .Toastify__progress-bar.Toastify__progress-bar--animated {
+    @apply absolute top-0 bottom-0 right-0 -z-10 h-full;
+
+    &.Toastify__progress-bar--success {
+      @apply bg-green-50;
+    }
+
+    &.Toastify__progress-bar--error {
+      @apply bg-red-100;
+    }
+  }
+}
