--- a/src/index.scss
+++ b/src/index.scss
@@ -27,7 +27,7 @@ h6 {
   @apply w-96 p-0 shadow-none;
 
   .Toastify__toast {
-    @apply relative overflow-hidden rounded-lg p-4 shadow-center;
+    @apply relative overflow-hidden rounded-lg px-4 py-2 shadow-center;
   }
 
   .Toastify__toast-body {
@@ -35,7 +35,7 @@ h6 {
   }
 
   .Toastify__close-button {
-    @apply absolute right-4 top-6 z-0 flex h-6 w-6 items-center justify-center rounded-full pl-px text-slate-700;
+    @apply absolute right-4 top-5 z-0 flex h-6 w-6 items-center justify-center rounded-full pl-px text-slate-700;
 
     svg {
       @apply w-3;
