--- a/src/index.scss
+++ b/src/index.scss
@@ -17,9 +17,47 @@ h6 {
   @apply text-slate-700;
 }
 
+.overflow-overlay {
+  overflow: overlay;
+
+  &::-webkit-scrollbar {
+    @apply w-3.5 rounded-br-md rounded-tr-md border-2 border-gray-100 bg-transparent;
+  }
+
+  &::-webkit-scrollbar-track {
+    @apply bg-transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    @apply rounded-t-full rounded-b-full bg-transparent bg-clip-padding duration-100;
+
+    border: 4px solid rgba(0, 0, 0, 0);
+  }
+
+  &:hover {
+    &::-webkit-scrollbar-thumb {
+      @apply bg-gray-200;
+    }
+  }
+}
+
+::-webkit-scrollbar {
+  width: 14px;
+}
+
 .scroll-hidden {
   &::-webkit-scrollbar {
     @apply hidden;
+  }
+}
+
+.scroll-transparent {
+  &::-webkit-scrollbar {
+    @apply w-2 rounded-br-md rounded-tr-md border-2 border-gray-100 bg-transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    @apply w-1 rounded-t-md rounded-b-md bg-gray-100;
   }
 }
 
