--- a/src/index.scss
+++ b/src/index.scss
@@ -17,11 +17,17 @@ h6 {
   @apply scroll-smooth text-slate-700;
 }
 
+.encacap-select-option-selected {
+  * {
+    @apply text-white;
+  }
+}
+
 .overflow-overlay {
-  overflow: overlay;
+  @apply overflow-auto;
 
   &::-webkit-scrollbar {
-    @apply w-3.5 rounded-br-md rounded-tr-md border-2 border-gray-100 bg-transparent;
+    @apply w-2 rounded-br-md rounded-tr-md border-2 border-gray-100 bg-transparent;
   }
 
   &::-webkit-scrollbar-track {
@@ -29,9 +35,7 @@ h6 {
   }
 
   &::-webkit-scrollbar-thumb {
-    @apply rounded-t-full rounded-b-full bg-transparent bg-clip-padding duration-100;
-
-    border: 4px solid rgba(0, 0, 0, 0);
+    @apply rounded-t-full rounded-b-full border-4 border-black bg-transparent bg-clip-padding duration-100;
   }
 
   &:hover {
@@ -39,10 +43,6 @@ h6 {
       @apply bg-gray-200;
     }
   }
-}
-
-.overflow-overlay::-webkit-scrollbar {
-  width: 14px;
 }
 
 .scroll-hidden {
@@ -96,5 +96,10 @@ h6 {
 .tox {
   &-tinymce {
     border: none !important;
+  }
+
+  &-fullscreen {
+    top: 80px !important;
+    height: calc(100vh - 80px) !important;
   }
 }
